--- a/index.html
+++ b/index.html
@@ -7,11 +7,57 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Elevate Clothing</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-dark bg-dark">
+      <ul class="nav">
+        <a class="navbar-brand" href="">
+    <img src="img/elevate.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    Elevate
+        </a>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Men</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Women</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         News
+        </a>
+       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+         <a class="dropdown-item" href="#">Sales</a>
+         <a class="dropdown-item" href="#">New arrivals</a>
+       </div>
+     </li>
+    </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+</nav>
+
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+   <div class="row">
+     <div class="col-4">
+       <img class="main" src="img/model.jpg" alt="model">
+     </div>
+     <div class="col-8">
+       <h1 class="display-3 title">Elevate</h1>
+       <p class="lead">---------------------------</p>
+     </div>
+   </div>
+ </div>
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
