--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
         <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Men</a>
+        <a class="nav-link" href="second.html">Men</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Women</a>
+        <a class="nav-link" href="third.html">Women</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="about.html">About</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          News
         </a>
        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-         <a class="dropdown-item" href="#">Sales</a>
+         <a class="dropdown-item" href="news.html">Sales</a>
          <a class="dropdown-item" href="#">New arrivals</a>
        </div>
      </li>
