--- a/about.html
+++ b/about.html
@@ -11,7 +11,35 @@
     <title>Elevate Clothing</title>
   </head>
   <body>
-    
+    <nav class="navbar navbar-dark bg-dark">
+      <ul class="nav">
+        <a class="navbar-brand" href="">
+    <img src="img/elevate.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    Elevate
+        </a>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="second.html">Men</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="third.html">Women</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         News
+        </a>
+       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+         <a class="dropdown-item" href="news.html">Sales</a>
+         <a class="dropdown-item" href="#">New arrivals</a>
+       </div>
+     </li>
+    </ul>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
