--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:700i|Fira+Sans" rel="stylesheet">
     <title>Elevate Clothing</title>
   </head>
   <body>
@@ -58,6 +59,51 @@
    </div>
  </div>
   </div>
+</br>
+</br>
+  <div class="row">
+  <div class="col-sm-3">
+    <div class="card" style="width: 18rem;">
+      <img src="img/pink.jpg" class="card-img-top" alt="pink">
+      <div class="card-body">
+        <h5 class="card-title">Ladies cropped hoodie</h5>
+        <p class="card-text">Price:$40.00</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-3">
+    <div class="card" style="width: 18rem;">
+      <img src="img/college.jpg" class="card-img-top" alt="college">
+      <div class="card-body">
+        <h5 class="card-title">Unisex College Hoodie</h5>
+        <p class="card-text">Price:$32.99</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-3">
+    <div class="card" style="width: 18rem;">
+      <img src="img/porch-lights.jpg" class="card-img-top" alt="N/A">
+      <div class="card-body">
+        <h5 class="card-title">N/A</h5>
+        <p class="card-text">N/A </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-3">
+    <div class="card" style="width: 18rem;">
+      <img src="img/flower-lid.jpg" class="card-img-top" alt="N/A">
+      <div class="card-body">
+        <h5 class="card-title">N/A</h5>
+        <p class="card-text">Price:</p>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
