--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:700i|Fira+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
     <title>Elevate Clothing</title>
   </head>
   <body>
@@ -36,7 +37,7 @@
         </a>
        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
          <a class="dropdown-item" href="news.html">Sales</a>
-         <a class="dropdown-item" href="#">New arrivals</a>
+         <a class="dropdown-item" href="arrival.html">New arrivals</a>
        </div>
      </li>
     </ul>
@@ -54,11 +55,12 @@
      </div>
      <div class="col-8">
        <h1 class="display-3 title">Elevate</h1>
-       <p class="lead">---------------------------</p>
+       <p class="lead">Elevate your mind and lifestyle.</p>
      </div>
    </div>
  </div>
   </div>
+
 </br>
 </br>
   <div class="row">
@@ -82,19 +84,19 @@
   </div>
   <div class="col-sm-3">
     <div class="card" style="width: 18rem;">
-      <img src="img/porch-lights.jpg" class="card-img-top" alt="N/A">
+      <img src="img/crop.jpg" class="card-img-top" alt="N/A">
       <div class="card-body">
-        <h5 class="card-title">N/A</h5>
-        <p class="card-text">N/A </p>
+        <h5 class="card-title">Elevate Cropped Hoodie</h5>
+        <p class="card-text">Price:$42.00</p>
       </div>
     </div>
   </div>
   <div class="col-sm-3">
     <div class="card" style="width: 18rem;">
-      <img src="img/flower-lid.jpg" class="card-img-top" alt="N/A">
+      <img src="img/weather.jpg" class="card-img-top" alt="N/A">
       <div class="card-body">
-        <h5 class="card-title">N/A</h5>
-        <p class="card-text">Price:</p>
+        <h5 class="card-title">Elevate all Weather Jacket</h5>
+        <p class="card-text">Price:$49.00</p>
       </div>
     </div>
 
