--- a/news.html
+++ b/news.html
@@ -35,7 +35,7 @@
         </a>
        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
          <a class="dropdown-item" href="news.html">Sales</a>
-         <a class="dropdown-item" href="#">New arrivals</a>
+         <a class="dropdown-item" href="arrival.html">New arrivals</a>
        </div>
      </li>
     </ul>
