--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:700i|Fira+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
     <title>Elevate Clothing</title>
   </head>
   <body>
@@ -128,6 +129,17 @@
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
+  </div>
+</div>
+</br>
+</br>
+<div class="media">
+  <img src="img/elevate.png" class="mr-3" alt="logo">
+  <div class="media-body">
+    <h5 class="mt-0">About</h5>
+    ELEVATE Clothing Co. is dedicated to those who are willing to take a risk and overcome the circumstances in their lives to get to the next level.
+
+Whether you're an entrepreneur or a 14-year old kid picking up a skate board for the first time and trying to land that kick flip. We are for you. We are for the dreamers, the adventurers, the believers and the go getters. ELEVATE your mind and lifestyle.
   </div>
 </div>
 
