--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 
 </br>
 </br>
+
+<div class="container-fluid">
   <div class="row">
   <div class="col-sm-3">
     <div class="card" style="width: 18rem;">
@@ -103,6 +105,8 @@
   </div>
 </div>
 
+</div>
+
 </br>
 </br>
 
@@ -131,6 +135,8 @@
     </div>
   </div>
 </div>
+</br>
+</br>
 </br>
 </br>
 <div class="media">
