--- a/index.html
+++ b/index.html
@@ -7,150 +7,126 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:700i|Fira+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
-    <title>Elevate Clothing</title>
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- MY STYLES -->
+    <link rel="stylesheet" href="css/master.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
+
+
+    <title>Quarantine Site</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark">
-      <ul class="nav">
-        <a class="navbar-brand" href="">
-    <img src="img/elevate.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    Elevate
-        </a>
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="second.html">Men</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="third.html">Women</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-         News
-        </a>
-       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-         <a class="dropdown-item" href="news.html">Sales</a>
-         <a class="dropdown-item" href="arrival.html">New arrivals</a>
-       </div>
-     </li>
-    </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-</nav>
 
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-   <div class="row">
-     <div class="col-4">
-       <img class="main" src="img/model.jpg" alt="model">
-     </div>
-     <div class="col-8">
-       <h1 class="display-3 title">Elevate</h1>
-       <p class="lead">Elevate your mind and lifestyle.</p>
-     </div>
-   </div>
- </div>
-  </div>
-
-</br>
-</br>
-
-<div class="container-fluid">
-  <div class="row">
-  <div class="col-sm-3">
-    <div class="card" style="width: 18rem;">
-      <img src="img/pink.jpg" class="card-img-top" alt="pink">
-      <div class="card-body">
-        <h5 class="card-title">Ladies cropped hoodie</h5>
-        <p class="card-text">Price:$40.00</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="card" style="width: 18rem;">
-      <img src="img/college.jpg" class="card-img-top" alt="college">
-      <div class="card-body">
-        <h5 class="card-title">Unisex College Hoodie</h5>
-        <p class="card-text">Price:$32.99</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="card" style="width: 18rem;">
-      <img src="img/crop.jpg" class="card-img-top" alt="N/A">
-      <div class="card-body">
-        <h5 class="card-title">Elevate Cropped Hoodie</h5>
-        <p class="card-text">Price:$42.00</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="card" style="width: 18rem;">
-      <img src="img/weather.jpg" class="card-img-top" alt="N/A">
-      <div class="card-body">
-        <h5 class="card-title">Elevate all Weather Jacket</h5>
-        <p class="card-text">Price:$49.00</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-</div>
-
-</br>
-</br>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Message
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Sales</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Stephanie Gonzalez</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="hobbies.html">Hobbies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="thankyou.html">Thank You</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Boro Strong</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="modal-body">
-        Get 50% off for a limited time only!
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+      <!-- Jumbotron Header -->
+      <header class="jumbotron my-4 text-center">
+        <h1 class="display-3 animated fadeInDown">My Quarantine Website</h1>
+        <p class="lead">I am going to create this website to practice my web design/development skills through the COVID-19 quarantine.</p>
+      </header>
+
+      <!-- Page Features -->
+      <div class="row text-center">
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img class="card-img-top" src="img/portfolio.png" alt="portfolio">
+            <div class="card-body">
+              <h4 class="card-title animated slideInDown">My Portfolio</h4>
+              <p class="card-text">I enjoy what I do in my web design class and my portfolio will have more details as to why. </p>
+            </div>
+            <div class="card-footer">
+              <a href="[ADD LINK TO YOUR PORTFOLIO]" class="btn btn-primary" target="_blank">Visit My Portfolio</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img class="card-img-top" src="img/artistic.jpg" alt="hobby">
+            <div class="card-body">
+              <h4 class="card-title animated slideInDown">Hobbies</h4>
+              <p class="card-text">Whether it's a good book, recipe, or activity, here are some hobbies helping me get through this quarantine.</p>
+            </div>
+            <div class="card-footer">
+              <a href="hobbies.html" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img class="card-img-top" src="img/hug.jpg" alt="hug">
+            <div class="card-body">
+              <h4 class="card-title animated slideInDown">Thank You</h4>
+              <p class="card-text">Sometimes we forget to tell people how much we appreciate them. I want to say thank you!</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img class="card-img-top" src="img/school.jpg" alt="spirit">
+            <div class="card-body">
+              <h4 class="card-title animated slideInDown">Boro Strong</h4>
+              <p class="card-text">I am Boro Strong and here is how I show pride for being a part of such an amazing school & community.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Find Out More!</a>
+            </div>
+          </div>
+        </div>
+
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+      <!-- /.row -->
+
+
     </div>
-  </div>
-</div>
-</br>
-</br>
-</br>
-</br>
-<div class="media">
-  <img src="img/elevate.png" class="mr-3" alt="logo">
-  <div class="media-body">
-    <h5 class="mt-0">About</h5>
-    ELEVATE Clothing Co. is dedicated to those who are willing to take a risk and overcome the circumstances in their lives to get to the next level.
+    <!-- /.container -->
 
-Whether you're an entrepreneur or a 14-year old kid picking up a skate board for the first time and trying to land that kick flip. We are for you. We are for the dreamers, the adventurers, the believers and the go getters. ELEVATE your mind and lifestyle.
-  </div>
-</div>
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Boro Class of 2022</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
-
-<!--#9EE493-->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
